# task_manager_py

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py  task_manager.cpp
example/: example.py
include/: task_manager.h
src/: task_manager.cpp
src/python/: task_manager.cpp
src/test/: test_task_manager.cpp
